<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/frameLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:textAllCaps="false"
        android:textSize="22.0sp"
        android:id="@+id/screen2_btn_test"
        android:padding="15.0dip"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120.0dip"
        android:layout_marginTop="50.0dip"
        android:text="@string/screen2_but1" />
    <TextView
        android:textAllCaps="false"
        android:textSize="20.0sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/screen2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen2_text1"
        android:layout_centerInParent="true" />
    <Button
        android:textAllCaps="false"
        android:id="@+id/btn_left_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40.0dip"
        android:text="@string/button_up_left"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />
    <Button
        android:textAllCaps="false"
        android:id="@+id/btn_right_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50.0dip"
        android:text="@string/button_up_right"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />
    <Button
        android:textAllCaps="false"
        android:id="@+id/btn_bottom_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30.0dip"
        android:layout_marginBottom="50.0dip"
        android:text="@string/button_bottom_left"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true" />
    <Button
        android:textAllCaps="false"
        android:id="@+id/btn_bottom_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40.0dip"
        android:layout_marginBottom="50.0dip"
        android:text="@string/button_bottom_right"
        android:layout_alignParentBottom="true" />
</RelativeLayout>