<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:textAllCaps="false"
        android:textSize="20.0sp"
        android:id="@+id/screen1_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen1_text1"
        android:layout_centerInParent="true" />
    <Button
        android:textAllCaps="false"
        android:textSize="18.0sp"
        android:id="@+id/screen1_but1"
        android:padding="15.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100.0dip"
        android:layout_marginTop="50.0dip"
        android:text="@string/screen1_but1" />
    <Button
        android:textAllCaps="false"
        android:textSize="18.0sp"
        android:id="@+id/screen1_but2"
        android:padding="15.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100.0dip"
        android:layout_marginTop="50.0dip"
        android:text="@string/screen1_but2"
        android:layout_below="@id/screen1_but1" />
    <Button
        android:textAllCaps="false"
        android:textSize="18.0sp"
        android:id="@+id/screen1_but3"
        android:padding="15.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100.0dip"
        android:layout_marginTop="50.0dip"
        android:text="@string/screen1_but3"
        android:layout_below="@id/screen1_but2" />
    <Button
        android:textAllCaps="false"
        android:textSize="18.0sp"
        android:id="@+id/screen1_but4"
        android:padding="15.0dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100.0dip"
        android:layout_marginTop="50.0dip"
        android:text="@string/screen1_but4"
        android:layout_below="@id/screen1_but3" />
</RelativeLayout>